--- a/scss/index0313.scss
+++ b/scss/index0313.scss
@@ -148,21 +148,32 @@ $containerWidth: 980px;
     .block1 {
       width: 100%;
       height: 447px;
-
+      > * {
+        float: left;
+        display: inline-block;
+      }
       > img {
-        position: absolute;
-        left: 0;
+        width: 370px;
+      }
+      > .content {
+        width: calc(100% - 370px);
       }
 
-      .content {
-        position: absolute;
-        left: 370px;
-        width: calc( 100% - 370px);
-        height: 100%;
-        background-color: rgba(187, 185, 186, .9);
-        text-align: left;
-        padding: 60px;
-      }
+      //
+      // > img {
+      //   position: absolute;
+      //   left: 0;
+      // }
+      //
+      // .content {
+      //   position: absolute;
+      //   left: 370px;
+      //   width: calc( 100% - 370px);
+      //   height: 100%;
+      //   background-color: rgba(187, 185, 186, .9);
+      //   text-align: left;
+      //   padding: 60px;
+      // }
     }
     .block2 {
       width: 100%;
@@ -292,6 +303,7 @@ $containerWidth: 980px;
   height: 100%;
 
   z-index: 1;
+  //  img記得設１００％
   > img {
     width: 100%;
   }
