--- a/css/public.css
+++ b/css/public.css
@@ -1,54 +1,1 @@
-/*
-Error: Invalid CSS after "$minHeight: 2798px": expected "{", was ";"
-        on line 50 of /Users/wu-tzu-hsuan/www/myblog/cmd/../scss/public.scss
-
-45:   background-color: rgb(49, 70, 89);
-46:   @include range-width(600px) {
-47:     background-color: rgb(54, 66, 44);
-48:   }
-49: =======
-50: $minHeight: 2798px;
-51: $menuWidth: 228px;
-52: $contentLeftWidth: 370px;
-53: 
-54: #site_container {
-55:   position: relative;
-
-Backtrace:
-/Users/wu-tzu-hsuan/www/myblog/cmd/../scss/public.scss:50
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:1207:in `expected'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:1137:in `expected'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:1132:in `tok!'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:665:in `block'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:735:in `declaration_or_ruleset'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:685:in `block_child'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:677:in `block_contents'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:666:in `block'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:658:in `ruleset'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:684:in `block_child'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:677:in `block_contents'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:125:in `stylesheet'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/scss/parser.rb:41:in `parse'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/engine.rb:409:in `_to_tree'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/engine.rb:284:in `render'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:494:in `update_stylesheet'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/vendor/listen/lib/listen/adapter.rb:254:in `call'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
-/Users/wu-tzu-hsuan/.rvm/gems/ruby-2.2.2/gems/sass-3.4.25/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"$minHeight: 2798px\": expected \"{\", was \";\"\A         on line 50 of /Users/wu-tzu-hsuan/www/myblog/cmd/../scss/public.scss\A \A 45:   background-color: rgb(49, 70, 89);\A 46:   @include range-width(600px) {\A 47:     background-color: rgb(54, 66, 44);\A 48:   }\A 49: =======\A 50: $minHeight: 2798px;\A 51: $menuWidth: 228px;\A 52: $contentLeftWidth: 370px;\A 53: \A 54: #site_container {\A 55:   position: relative;"; }
+﻿*,*:after,*:before{vertical-align:top;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;-moz-osx-font-smoothing:antialiased;-webkit-font-smoothing:antialiased;-moz-font-smoothing:antialiased;-ms-font-smoothing:antialiased;-o-font-smoothing:antialiased}*::-moz-selection,*:after::-moz-selection,*:before::-moz-selection{color:#fff;background-color:#96c8ff}*::selection,*:after::selection,*:before::selection{color:#fff;background-color:#96c8ff}html{min-height:100%}html body{position:relative;display:inline-block;width:100%;min-height:100%;margin:0;padding:0;color:#5a5a5a;font-size:medium;font-family:Roboto, RobotoDraft, Helvetica, Arial, sans-serif, "微軟正黑體", "Microsoft JhengHei";background:#fff;background-image:url('/myblog/img/bg/grunge.png');-moz-osx-font-smoothing:antialiased;-webkit-font-smoothing:antialiased;-moz-font-smoothing:antialiased;-ms-font-smoothing:antialiased;-o-font-smoothing:antialiased}#header{position:relative;display:inline-block;width:100%;z-index:3;text-align:center;background-color:white}#header .center{position:relative;display:inline-block;width:980px;height:100px;*zoom:1}#header .center:after{display:table;content:"";line-height:0;clear:both}#header .center>*{position:relative;display:inline-block;float:left;height:100%}#header .center .logo{width:228px;background-color:#16a62e;color:white;font-size:40px;line-height:100px;text-align:center}#header .center .menu{padding-left:60px;padding-top:55px}#header .center .menu>a{display:inline-block;width:calc( (980px - 228px) / 5 );font-size:25px;line-height:25px;text-align:center;text-decoration:none;color:black}#guide{position:relative;display:inline-block;width:100%;text-align:center;z-index:2;*zoom:1}#guide:after{display:table;content:"";line-height:0;clear:both}#guide .center{position:relative;display:inline-block;width:980px}#guide .center .content{position:relative;display:inline-block;width:370px;height:600px;float:left;text-align:left;padding:80px;padding-top:180px;background-color:rgba(228,230,227,0.55)}#guide .center .content>a{font-size:25px;line-height:25px;padding:10px;margin-top:10px;background-color:#31a61e;color:white;text-decoration:none}#container{position:relative;display:inline-block;width:100%;background-color:white;text-align:center;z-index:3;*zoom:1}#container:after{display:table;content:"";line-height:0;clear:both}#container .center{position:relative;display:inline-block;width:980px}#container .center>*{position:relative;display:inline-block;float:left}#container .center .block1{width:100%;height:447px}#container .center .block1>*{position:relative;display:inline-block;height:100%}#container .center .block1 .image{float:left}#container .center .block1 .content{width:calc( 980px - 370px );padding:60px;text-align:left;background-color:rgba(163,170,167,0.3)}#container .center .block2{width:100%;height:258px}#container .center .block2>*{position:relative;display:inline-block;height:100%;float:left}#container .center .block2 .blog{left:calc( 370px - 148px );height:148px;width:148px;background-color:#968f8f;color:white;font-size:25px;line-height:148px;text-align:center}#container .center .block2 .content{position:absolute;left:370px;width:470px;background-color:rgba(82,198,37,0.8);color:white;padding:40px;text-align:left}#container .center .block3{width:100%;height:470px}#container .center .block3>img{position:relative;display:inline-block;height:100%;float:left}#container .center .block4{width:100%;height:299px}#container .center .block4>*{position:relative;display:inline-block;height:100%}#container .center .block4 .service{position:absolute;right:383px;width:148px;height:148px;background-color:#2bbd19;color:white;font-size:25px;line-height:148px;text-align:center}#container .center .block4 .content{float:right;width:383px;background-color:rgba(163,170,167,0.3);color:black;padding:50px;text-align:left}#container .center .block5{width:100%;height:560px;margin-top:-80px}#container .center .block5>*{position:absolute;display:inline-block;right:383px;height:100%}#footer{position:relative;display:inline-block;width:100%;height:289px;z-index:3;text-align:center;padding-top:50px}#footer .part{position:relative;display:inline-block;width:calc( 980px / 3);height:80px;padding:30px;border-right:2px solid white}#footer .part>a{text-decoration:none;color:white}#footer .foot_txt{position:relative;display:inline-block;margin-top:80px}#bg{position:fixed;display:inline-block;top:0;left:0;z-index:2;width:100%;height:100%}#bg>img{width:100%;height:100%}#fg{position:fixed;display:inline-block;left:0;bottom:0;z-index:1;width:100%;height:100%}#fg>img{width:100%;height:100%}
