--- a/scss/public.scss
+++ b/scss/public.scss
@@ -280,6 +280,7 @@ $contentWidth: 980px;
     position: relative;
     display: inline-block;
     margin-top: 80px;
+    text-align: center;
   }
 }
 
