--- a/scss/public.scss
+++ b/scss/public.scss
@@ -45,6 +45,7 @@ $contentWidth: 980px;
   position: relative;
   display: inline-block;
   width: 100%;
+  min-width: 374px;
   z-index: 3;
   text-align: center;
   background-color: white;
@@ -86,6 +87,23 @@ $contentWidth: 980px;
       }
     }
   }
+
+  @include range-width(0, 1000px) {
+    .center {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+
+      .logo {
+        width: calc( 100% - 100px);
+        text-align: center;
+        float: left;
+      }
+      .menu {
+        display: none;
+      }
+    }
+  }
 }
 
 #guide {
@@ -120,6 +138,39 @@ $contentWidth: 980px;
         background-color: rgb(49, 166, 30);
         color: white;
         text-decoration: none;
+        width: 194px;
+        height: 49px;
+      }
+    }
+  }
+
+  @include range-width(0, 1000px) {
+    .center {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+      min-width: 374px;
+      height: 600px;
+      text-align: center;
+      padding: 50px;
+
+      .content {
+        padding: 20px;
+        padding-top: 120px;
+        height: 500px;
+        width: 100%;
+        text-align: center;
+
+        > h1 {
+          text-align: center;
+          display: inline-block;
+          height: 148px;
+          width: 214px;
+        }
+        > a {
+          display: block;
+          margin-left: calc( 50% - (194px/2));
+        }
       }
     }
   }
@@ -251,6 +302,107 @@ $contentWidth: 980px;
 
     }
   }
+
+  @include range-width(0, 1000px) {
+
+    .center {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+
+      .block1 {
+        position: relative;
+        display: inline-block;
+        height: calc( 447px + 400px );
+
+        > * {
+          display: inline-block;
+          width: 100%;
+          height: 447px;
+        }
+        .image {
+          float: left;
+          img {
+            // width: 100%;
+            float: left;
+            height: 100%;
+          }
+        }
+        .content {
+          width: 100%;
+          height: 400px;
+        }
+      }
+      .block2 {
+        position: relative;
+        display: block;
+        height: calc(148px + 248px);
+
+        > * {
+          position: relative;
+          display: block;
+        }
+        .blog {
+          left: 0;
+          display: block;
+          width: 100%;
+        }
+        .content {
+          z-index: 3;
+          left: 0;
+          position: relative;
+          display: block;
+          width: 100%;
+          height: 248px;
+        }
+      }
+
+      .block3 {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+        img {
+          width: 100%;
+        }
+      }
+
+      .block4 {
+        position: relative;
+        display: inline-block;
+        height: calc(148px + 248px);
+
+        .service {
+          position: relative;
+          display: block;
+          height: 148px;
+          left: 0;
+          width: 100%;
+        }
+        .content {
+          z-index: 3;
+          position: relative;
+          display: block;
+          height: 248px;
+          width: 100%;
+          left: 0;
+        }
+      }
+
+      .block5 {
+        position: relative;
+        display: inline-block;
+        margin-top: 0;
+
+        img {
+          right: 0px;
+          width: 100%;
+          heigth: 100%;
+        }
+      }
+    }
+
+  }
 }
 
 #footer {
@@ -274,14 +426,41 @@ $contentWidth: 980px;
       text-decoration: none;
       color: white;
     }
+
+    &:nth-child(3) {
+      border-right: 0;
+    }
+
   }
 
   .foot_txt {
     position: relative;
-    display: inline-block;
+    display: block;
     margin-top: 80px;
     text-align: center;
   }
+
+  @include range-width(0, 1000px) {
+    height: 100%;
+    text-align: center;
+
+    .part {
+      position: relative;
+      width: 100%;
+      display: inline-block;
+    }
+
+    .foot_txt {
+      position: relative;
+      display: block;
+      margin-top: 24px;
+      text-align: center;
+      height: 50px;
+      // border: 1px solid red;
+
+    }
+  }
+
 }
 
 #bg {
@@ -309,6 +488,7 @@ $contentWidth: 980px;
   height: 100%;
 
   > img {
+    right: 0;
     width: 100%;
     height: 100%;
   }
