--- a/scss/oa.scss
+++ b/scss/oa.scss
@@ -128,6 +128,7 @@ html {
     display: inline-block;
     border: 1px solid red;
     margin: 0 auto;
+  height: 100px;
 
     @include clearfix;
 
@@ -135,29 +136,33 @@ html {
       float: left;
       display: inline-block;
       border: 1px solid red;
-      height: 50px;
+      // height: 50px;
     }
     .c1 {
       width: 100px;
+      height: 100%;
     }
     .c2 {
       width: calc(100% - 100px - 200px);
+      padding: 20px 10px;
+      height: 100%;
     }
     .c3 {
       width: 200px;
     }
 
-    @include range-width(0, 800px) {
+    @include range-width(0, 700px) {
+      height: auto;
       .c1 {
-        // width: 100%;
-        width: calc(100% - 50px);
+        width: 100%;
+        // width: calc(100% - 50px);
       }
       .c2 {
         width: 100%;
-        display: none;
+        // display: none;
       }
       .c3 {
-        width: 50px;
+        width: 100%;
       }
     }
   }
