--- a/scss/public.scss
+++ b/scss/public.scss
@@ -29,7 +29,6 @@ html {
     padding: 0;
 
     color: rgba(90, 90, 90, 1.00);
-    // text-align: center;
     font-size: medium;
     font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif, "微軟正黑體", "Microsoft JhengHei";
 
@@ -86,6 +85,16 @@ $contentWidth: 980px;
         color: black;
       }
     }
+
+    .burger {
+      display: none;
+      @include range-width(0, 1000px) {
+        display: inline-block;
+      };
+      font-size: 50px;
+      line-height: 100px;
+      float: right;
+    }
   }
 
   @include range-width(320px, 1000px) {
@@ -120,6 +129,55 @@ $contentWidth: 980px;
       }
     }
   }
+}
+
+#menu {
+  position: fixed;
+  display: none;
+  @include range-width(0, 1000px) {
+    display: inline-block;
+  };
+  width: 200px;
+  height: 100%;
+  left: -200px;
+  top: 0;
+  background-color: rgb(32, 175, 9);
+  z-index: 6;
+  @include box-shadow(0 0 10px rgba(0, 0, 0, .5));
+  @include opacity(0);
+  @include transition(left .3s, opacity .3s);
+
+  &.show {
+    left: 0;
+    @include opacity(1);
+  }
+
+  a {
+    position: relative;
+    display: block;
+    font-size: 25px;
+    line-height: 25px;
+    text-decoration: none;
+    color: white;
+    margin-top: 30px;
+    margin-left: 20px;
+  }
+
+}
+
+#over_layout {
+  display: none;
+  &.show {
+    display: inline-block;
+  }
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(52, 52, 52, 0.94);
+  z-index: 5;
+  overflow: hidden;
 }
 
 #guide {
@@ -455,7 +513,6 @@ $contentWidth: 980px;
   z-index: 3;
   text-align: center;
   padding-top: 50px;
-  background-color: rgba(244, 237, 243, 0.42);
 
   .part {
     position: relative;
@@ -463,12 +520,12 @@ $contentWidth: 980px;
     width: calc( 980px / 3);
     height: 80px;
     padding: 30px;
-    border-right: 2px solid black;
-    color: black;
+    border-right: 2px solid white;
+    color: white;
 
     > a {
       text-decoration: none;
-      color: black;
+      color: white;
     }
 
     &:nth-child(3) {
@@ -479,7 +536,7 @@ $contentWidth: 980px;
 
   .foot_txt {
     position: relative;
-    display: block;
+    display: white;
     margin-top: 80px;
     text-align: center;
   }
@@ -492,6 +549,7 @@ $contentWidth: 980px;
       position: relative;
       width: 100%;
       display: inline-block;
+      border: 0;
     }
 
     .foot_txt {
@@ -500,6 +558,7 @@ $contentWidth: 980px;
       margin-top: 24px;
       text-align: center;
       height: 50px;
+      color: white;
     }
   }
 
