--- a/font/icomoon/style.css
+++ b/font/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?1amafa');
-  src:  url('fonts/icomoon.eot?1amafa#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?1amafa') format('truetype'),
-    url('fonts/icomoon.woff?1amafa') format('woff'),
-    url('fonts/icomoon.svg?1amafa#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?wlrp2n');
+  src:  url('fonts/icomoon.eot?wlrp2n#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?wlrp2n') format('truetype'),
+    url('fonts/icomoon.woff?wlrp2n') format('woff'),
+    url('fonts/icomoon.svg?wlrp2n#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,4 +24,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+.icon-close:before {
+  content: "\e903";
+}
+.icon-arrow_drop_down:before {
+  content: "\e901";
+}
+.icon-menu:before {
+  content: "\e902";
+}
+.icon-search:before {
+  content: "\e900";
+}
