--- a/scss/public.scss
+++ b/scss/public.scss
@@ -94,6 +94,9 @@ $contentWidth: 980px;
       font-size: 50px;
       line-height: 100px;
       float: right;
+
+      color: #988282;
+      width: 100px;
     }
   }
 
